--- a/craft/templates/index.twig
+++ b/craft/templates/index.twig
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{ craft.laravelMix.mix('app.css') }}">
+    <link rel="stylesheet" href="{{ craft.laravelMix.mix('extraSassTest.css') }}">
     <title>Document</title>
 </head>
 <body>
@@ -19,6 +20,23 @@
 <h2 class="testThree">Test Thrasdddeee</h2>
 
 <h4>Test 12132312</h4>
+
+<div class="o-container">
+    <div class="o-column">Test</div>
+    <div class="o-column">Test</div>
+</div>
+
+<div class="c-tabs">
+    test
+</div>
+
+<div class="columns">
+    <div class="column">1</div>
+    <div class="column">2</div>
+    <div class="column">3</div>
+    <div class="column">4</div>
+    <div class="column">5</div>
+</div>
 
 <script src="{{ craft.laravelMix.mix('vendor.js') }}" ></script>
 <script src="{{ craft.laravelMix.mix('app.js') }}" ></script>
