Added some example icons

--- a/craft/templates/index.twig
+++ b/craft/templates/index.twig
@@ -30,6 +30,13 @@
     test
 </div>
 
+{#<svg class="icon icon-instagram">#}
+    {#<use xlink:href="/dist/template-images/icon-instagram"></use>#}
+{#</svg>#}
+<img src="user.svg" alt="">
+<img src="coffee2.svg" alt="">
+<span class="name"> icon-instagram</span>
+
 <div class="columns">
     <div class="column">1</div>
     <div class="column">2</div>
@@ -37,6 +44,8 @@
     <div class="column">4</div>
     <div class="column">5</div>
 </div>
+
+<div class="testFour">testino</div>
 
 <script src="{{ craft.laravelMix.mix('vendor.js') }}" ></script>
 <script src="{{ craft.laravelMix.mix('app.js') }}" ></script>
