--- a/craft/templates/src/scss/sass-styling.scss
+++ b/craft/templates/src/scss/sass-styling.scss
@@ -7,11 +7,13 @@ $test: green;
 // testen
 * {
   color: $test !important;
-  background: url('./images/stub.png');
+  //background: url('./images/stub.png');
+  //background: url('./icons/arrow-right.svg');
 }
 
 body {
   font-family: 'robotothin_italic' sans-serif, serif;
+  //background: url('./icons/cook2.svg');
 }
 
 @font-face {
@@ -31,10 +33,71 @@ body {
 
 .testFour {
   color: grey;
+  background: url('./icons/instagram.svg');
+  background: url('./icons/youtube.svg')
 }
 
 .test {
   h1 {
     color: deeppink;
   }
+}
+
+
+// Icomoon test
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+
+/* ==========================================
+Single-colored icons can be modified like so:
+.icon-name {
+  font-size: 32px;
+  color: red;
+}
+========================================== */
+
+.icon-youtube {
+  width: 0.857421875em;
+}
+
+.icon-teapot {
+  width: 1.1875em;
+}
+
+.icon-arrow-left {
+  width: 0.857421875em;
+}
+
+.icon-arrow-right {
+  width: 0.857421875em;
+}
+
+.icon-arrow-up {
+  width: 0.9287109375em;
+}
+
+.icon-arrow-down {
+  width: 0.9287109375em;
+}
+
+.icon-coffee {
+  width: 1.0712890625em;
+}
+
+.icon-cutlery {
+  width: 0.7861328125em;
+}
+
+.icon-vimeo-square {
+  width: 0.857421875em;
+}
+
+.icon-tripadvisor {
+  width: 1.2861328125em;
 }
